# python-test-automation-framework

./: .gitignore  ALLURE_GUIDE.md  Dockerfile  MASS_TESTING_GUIDE.md  OPEN_REPORT_GUIDE.md  QUICK_START.md  README.md  allure.properties  allure_runner.py  conftest.py  docker-compose.yml  open_allure_report.py  package.json  pyproject.toml  requirements.txt  run_allure_demo.py  run_tests_and_report.py  run_tests_without_allure.py
.allure/: history.jsonl
.github/workflows/: mass-testing.yml  publish-report.yml  test.yml
api_clients/: order_grpc_client.py  user_api_client.py
config/: settings.py
pages/: README.md  __init__.py  base_page.py  inventory_page.py  login_locators.py  login_page.py
pages/auth/: __init__.py  login_page.py
pages/base/: __init__.py  base_page.py
pages/inventory/: __init__.py  inventory_page.py
pages/locators/: __init__.py  inventory_locators.py  login_locators.py
scripts/: dev_tools.py  mass_test_runner.py
test_data/: __init__.py  test_data_manager.py
tests/: test_inventory_allure.py  test_login_ui.py  test_login_ui_allure.py  test_order_grpc.py  test_user_api.py
tests/api/: __init__.py
tests/grpc/: __init__.py
tests/integration/: __init__.py
utils/: allure_helpers.py  common_functions.py  helpers.py  performance_optimizer.py  test_data_validator.py  test_suite_manager.py
